@@ -7,6 +7,8 @@ documents those changes that are of interest to users and admins.
  -- BGQ - Fix if large block goes into error and the next highest priority jobs
     are planning on using the block.  Previously it would fail those jobs
     erroneously.
+ -- BGQ - Fix issue when a cnode going to an error (not SoftwareError) state
+    with a job running or trying to run on it.
 
 * Changes in SLURM 2.4.3
 ========================
